# stake_nft_solana

./: Cargo.toml  package-lock.json  package.json
Client/: README.md  package-lock.json  package.json
program/src/: instruction.rs  lib.rs  processor.rs
src/: error.rs  instruction.rs  processor.rs  state.rs
src/client/: check_stakes.ts  keys_generator.ts  mint.ts  simple_utils.ts  stake.ts  unstake.ts  utils.ts
src/client/keys/: associated_token_account_priv.json  associated_token_account_pub.json  customer_test_pub.json  id_priv.json  id_pub.json  initializer_priv.json  initializer_pub.json  mint_test_pub.json  nft_mint_account_priv.json  nft_mint_account_pub.json  nft_token_account_priv.json  nft_token_account_pub.json  program_pub.json  rent_sysvar_priv.json  rent_sysvar_pub.json  stake_account_priv.json  stake_account_pub.json  system_program_priv.json  system_program_pub.json
src/program/: Cargo.toml
src/program/src/: entrypoint.rs  instruction.rs  processor.rs  state.rs
