[package]
name = "staking_program"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
derivative = "2.2.0"
thiserror = "1.0.24"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3"
borsh = "0.9"
solana-program = "1.7.8"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.7.4"
solana-sdk = "1.7.4"
solana-validator = "1.7.4"
spl-token = "3.2.0"

[lib]
crate-type = ["cdylib", "lib"]
